Take handwritten sources to zero deprecation warnings.
Twenty-eight sites. Almost all had a real replacement; three did not, and those are
suppressed with the reason recorded beside them.

Migrated:

  Class.forName(x).newInstance() -> .getDeclaredConstructor().newInstance(), at ten
  sites. Every one sits inside a catch(Exception) that logs and falls back, so the
  changed exception shape -- InvocationTargetException around a constructor's throw,
  NoSuchMethodException for a missing no-arg constructor -- is caught identically and
  the cause is still in the logged trace. DriverManagerDataSource.driver() was the
  exception, catching by type, and it gets two new clauses to match; the commit before
  this one settled what those clauses should do.

  new Integer/new Long -> Integer.valueOf/Long.valueOf. The Long in GooGooStatementCache
  is a deathmarch token, and valueOf caches small values, so this was worth checking
  rather than assuming: the token is a key in a TreeMap and a value in a HashMap, read
  back by equals and compareTo and never by identity, and the counter is monotonic, so
  no two live tokens can share a value.

  DomParseUtils.allTextFromElement -> allText, which in mchange-commons-java is the same
  method under its new name and delegates to it.

  AccessibleObject.isAccessible() dropped rather than replaced. Its replacement,
  canAccess(Object), is Java 9+, which we cannot require. The guard was doing nothing:
  the Methods come from getMethod(...) a few lines up, which returns a fresh copy whose
  accessible flag is false, so setAccessible(true) always ran anyway.

  PooledDataSource.close(boolean) -> close(). The implementation is `{ close(); }`; the
  argument has been meaningless since pools stopped being shared between DataSources.

  StatementCacheBenchmark off DriverManagerDataSourceFactory and
  PoolBackedDataSourceFactory onto DataSources, which is what their @deprecated tags
  point at. The five positional pool arguments become named ov